--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">Birds of a Feather</string>
+
+    <!--Main Activity Strings-->
+    <string name="main_activity_declare">Main Activity</string>
+    <string name="main_activity_launchpad">Team 26 BOF App Launch Pad</string>
+    <string name="start_user_information_workflow">START USER INFORMATION WORKFLOW</string>
+    <string name="start_home_activity">START HOME ACTIVITY</string>
+
+    <!--User Information Workflow-->
+    <!--Bluetooth Activity Strings-->
+    <string name="bluetooth_activity_declare">Bluetooth Activity</string>
+    <string name="start_name_activity">START NAME ACTIVITY</string>
+
+    <!--Name Activity Strings-->
+
+    <!--Picture Activity Strings-->
+
+    <!--Add Course Activity Strings-->
+
+    <!--Edit Course Activity Strings-->
+
+    <!--Home Activity Workflow-->
+    <!--Home Activity Strings-->
+
+    <!--Profile Activity Strings-->
+
 </resources>
