Updated Profile Activity on Zehua's branch - Rick

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="start_search_btn_text_off">START SEARCH</string>
     <string name="start_search_btn_text_on">STOP SEARCH</string>
 
+    <string name="go_to_profile_activity_btn">GO TO PROFILE ACTIVITY</string>
+
     <!--Profile Activity Strings-->
 
 </resources>
