--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
 
     <!--User Information Workflow-->
     <!--Bluetooth Activity Strings-->
-    <string name="bluetooth_activity_declare">Bluetooth Activity</string>
-    <string name="start_name_activity">START NAME ACTIVITY</string>
+    <string name="bluetooth_activity_declare">DO YOU GIVE PERMISSION TO ACCESS BLUETOOTH?</string>
+    <string name="start_name_activity">YES</string>
 
     <!--Name Activity Strings-->
 
